--- a/html/PBWAD/PBWAD000000.html
+++ b/html/PBWAD/PBWAD000000.html
@@ -131,7 +131,7 @@
 					<!-- //group-form -->
 
 					<div class="btn-wrap">
-						<button type="button" class="btn-medium btn-primary">검색</button>
+						<button type="button" class="btn-medium btn-primary"><i class="ico-search"></i>검색</button>
 					</div>
 
 					<!-- memo-list -->
@@ -226,7 +226,7 @@
 
 						<div class="no-result">
 							<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
-							<p class="body-medium fw-400">내역이 없습니다.</p>
+							<p class="body-medium fw-400">등록된 메모가 없습니다.</p>
 						</div>
 
 					</div>
