--- a/html/PBWBU/PBWBU000001_nodata.html
+++ b/html/PBWBU/PBWBU000001_nodata.html
@@ -97,7 +97,7 @@
 								<source srcset="/resources/images/PBWBU/init_business_card.svg">
 								<img src="/resources/images/PBWBU/init_business_card.svg" alt="">
 							</picture>
-							<p class="description info body-large ac">내 명함을 등록하고 공유해 보세요.</p>
+							<p class="body-large ac">내 명함을 등록하고 공유해 보세요.</p>
 						</div>
 						<!-- //init-regist -->
 					</div>
