--- a/html/PBWCA/PBWCA010000_year.html
+++ b/html/PBWCA/PBWCA010000_year.html
@@ -308,7 +308,7 @@
 		<div class="bottom-btn">
 			<div class="btn-wrap">
 				<button type="button" class="btn-large btn-outlined">취소</button>
-				<button type="button" class="btn-large btn-primary">등록</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>등록</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -487,6 +487,15 @@
 					</div>
 
 				</div>
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>확인</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
 			</div>
 		</div>
 	</div>
@@ -640,7 +649,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close="">선택</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>선택</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
@@ -695,7 +704,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close="">저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
