--- a/html/PBWCA/PBWCA029902.html
+++ b/html/PBWCA/PBWCA029902.html
@@ -213,7 +213,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary">개인 일정으로 추가</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>개인 일정으로 추가</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
