--- a/html/PBWFU/PBWFU050000_nodata.html
+++ b/html/PBWFU/PBWFU050000_nodata.html
@@ -125,241 +125,16 @@
 						<!-- sort-list -->
 					</div>
 
-					<div class="community-wrap">
-						<ul class="dep01">
+					<!-- division-center -->
+					<div class="division-center">
 
-							<li>
-								<!-- comment-wrap -->
-								<div class="comment-wrap">
-									<div class="comment-user">
-										<div class="comment-user-profile">
-											<div class="avartar avartar01"></div>
-											<strong class="name">나우리</strong>
-										</div>
-										<div class="comment-user-info">
-											<div class="divide-list">
-												<span>서울디지털프리미엄금융센터</span>
-											</div>
-											<span class="date">2024-12-17 16:33:51</span>
-											<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
-										</div>
-									</div>
-									<div class="comment-desc" data-toggle="toggle-wrap">
-										<div class="comment-desc-inner">
-											<p data-line="3">이곳에 내용이 들어갑니다</p>
-										</div>
-										<div class="comment-toggle-wrap">
-											<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-												<span class="toggle-off">더보기</span>
-												<span class="toggle-on">접기</span>
-											</button>
-										</div>
-									</div>
-									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
-										<div class="left">
-											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
-												<span class="toggle-off blind">좋아요</span>
-												<span class="toggle-on blind">좋아요 해제</span>
-												120
-											</button>
-										</div>
-										<div class="right"><button type="button" class="btn-noborder" data-micromodal-trigger="modal-reply-write"><i class="ico-reply"></i>답글</button></div>
-									</div>
-								</div>
-								<!-- comment-wrap -->
+						<div class="no-result">
+							<i class="icon-only icon-48 icon-notext bg-icon-gray_1"></i>
+							<p class="body-medium fw-400 ac">첫 게시글을 기다리고 있습니다. <span class="list-spacing"></span>여러분의 전문적이고 유익한 <br> 정보를 공유해주세요.</p>
+						</div>
 
-								<!-- dep02 -->
-								<ul class="dep02">
-									<li>
-										<!-- comment-wrap -->
-										<div class="comment-wrap">
-											<div class="comment-user-profile">
-												<div class="avartar avartar01"></div>
-												<strong class="name">나우리</strong>
-											</div>
-											<div class="comment-user-info">
-												<div class="divide-list">
-													<span>서울디지털프리미엄금융센터</span>
-												</div>
-												<span class="date">2024-12-17 16:33:51</span>
-												<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
-											</div>
-											<div class="tags tags-small tags-lightBlue">@나우리</div>
-											<div class="comment-desc" data-toggle="toggle-wrap">
-												<div class="comment-desc-inner">
-													<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-												</div>
-												<div class="comment-toggle-wrap">
-													<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-														<span class="toggle-off">더보기</span>
-														<span class="toggle-on">접기</span>
-													</button>
-												</div>
-											</div>
-											<div class="comment-btn-wrap" data-toggle="toggle-wrap">
-												<div class="left">
-													<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-														<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
-														<span class="toggle-off blind">좋아요</span>
-														<span class="toggle-on blind">좋아요 해제</span>
-														120
-													</button>
-												</div>
-												<div class="right"><button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button></div>
-											</div>
-										</div>
-										<!-- //comment-wrap -->
-
-									</li>
-
-									<li>
-										<!-- comment-wrap -->
-										<div class="comment-wrap">
-											<div class="comment-user-profile">
-												<div class="avartar avartar01"></div>
-												<strong class="name">나우리</strong>
-											</div>
-											<div class="comment-user-info">
-												<div class="divide-list">
-													<span>서울디지털프리미엄금융센터</span>
-												</div>
-												<span class="date">2024-12-17 16:33:51</span>
-												<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
-											</div>
-											<div class="tags tags-small tags-lightBlue">@나우리</div>
-											<div class="comment-desc" data-toggle="toggle-wrap">
-												<div class="comment-desc-inner">
-													<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-												</div>
-												<div class="comment-toggle-wrap">
-													<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-														<span class="toggle-off">더보기</span>
-														<span class="toggle-on">접기</span>
-													</button>
-												</div>
-											</div>
-											<div class="comment-btn-wrap" data-toggle="toggle-wrap">
-												<div class="left">
-													<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-														<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
-														<span class="toggle-off blind">좋아요</span>
-														<span class="toggle-on blind">좋아요 해제</span>
-														120
-													</button>
-												</div>
-												<div class="right"><button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button></div>
-											</div>
-										</div>
-										<!-- //comment-wrap -->
-
-									</li>
-								</ul>
-								<!-- dep02 -->
-
-							</li>
-							<li>
-
-								<!-- comment-wrap -->
-								<div class="comment-wrap">
-									<div class="comment-user-profile">
-										<div class="avartar avartar01"></div>
-										<strong class="name">나우리</strong>
-									</div>
-									<div class="comment-user-info">
-										<div class="divide-list">
-											<span>서울디지털프리미엄금융센터</span>
-										</div>
-										<span class="date">2024-12-17 16:33:51</span>
-										<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
-									</div>
-									<div class="comment-desc" data-toggle="toggle-wrap">
-										<div class="comment-desc-inner">
-											<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-										</div>
-										<div class="comment-toggle-wrap">
-											<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-												<span class="toggle-off">더보기</span>
-												<span class="toggle-on">접기</span>
-											</button>
-										</div>
-									</div>
-									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
-										<div class="left">
-											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
-												<span class="toggle-off blind">좋아요</span>
-												<span class="toggle-on blind">좋아요 해제</span>
-												120
-											</button>
-										</div>
-										<div class="right"><button type="button" class="btn-noborder"><i class="ico-reply"></i>답글</button></div>
-									</div>
-								</div>
-								<!-- comment-wrap -->
-
-							</li>
-							<li>
-
-								<!-- comment-wrap -->
-								<div class="comment-wrap">
-									<div class="comment-user">
-										<div class="comment-user-profile">
-											<div class="avartar avartar01"></div>
-											<strong class="name">나우리</strong>
-										</div>
-										<div class="comment-user-info">
-											<div class="divide-list">
-												<span>서울디지털프리미엄금융센터</span>
-											</div>
-											<span class="date">2024-12-17 16:33:51</span>
-											<button type="button" class="btn-more" data-micromodal-trigger="modal-dropdown-list" aria-label="수정 및 삭제"></button>
-										</div>
-									</div>
-									<div class="comment-desc" data-toggle="toggle-wrap">
-										<div class="comment-desc-inner">
-											<p data-line="3">이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다 이곳에 내용이 들어갑니다</p>
-										</div>
-										<div class="comment-toggle-wrap">
-											<button type="button" class="anchor chevron chevron-down fs-15" data-toggle="toggle-trigger" data-switch-before="chevron-down" data-switch-after="chevron-up">
-												<span class="toggle-off">더보기</span>
-												<span class="toggle-on">접기</span>
-											</button>
-										</div>
-									</div>
-									<div class="comment-btn-wrap" data-toggle="toggle-wrap">
-										<div class="left">
-											<button type="button" class="btn-noborder fs-15 fc-icon-gray_2" data-toggle="toggle-trigger" data-switch-before="fc-icon-gray_2" data-switch-after="fc-blue-500">
-												<i class="icon-only icon-20 icon-fav2 bg-icon-gray_2" data-switch-inner="true" data-switch-inner-before="icon-fav2 bg-icon-gray_2" data-switch-inner-after="icon-fav-active2 bg-blue-500"></i>
-												<span class="toggle-off blind">좋아요</span>
-												<span class="toggle-on blind">좋아요 해제</span>
-												120
-											</button>
-										</div>
-										<div class="right"><button type="button" class="btn-noborder" data-micromodal-trigger="modal-reply-write"><i class="ico-reply"></i>답글</button></div>
-									</div>
-								</div>
-								<!-- comment-wrap -->
-
-							</li>
-							<li>
-
-								<!-- comment-wrap -->
-								<div class="comment-wrap">
-									<div class="comment-user-profile">
-										<div class="avartar avartar-nodata "><i class="icon-only icon-24 icon-nodata bg-icon-gray_2"></i></div>
-									</div>
-									<div class="comment-user-info">
-										<p class="body-medium fw-400">원글이 삭제되었습니다.</p>
-									</div>
-								</div>
-								<!-- comment-wrap -->
-
-							</li>
-
-
-						</ul>
 					</div>
+					<!-- //division-center -->
 
 				</div>
 				<!-- sort-wrap -->
