--- a/html/PBWIV/PBWIV080000.html
+++ b/html/PBWIV/PBWIV080000.html
@@ -106,31 +106,31 @@
 						<div class="inp-group gap16 px0">
 							<div class="inp inp-medium">
 								<label>
-									<input type="checkbox" class="type-black" id="chk04" checked>
+									<input type="checkbox" class="type-kr" id="chk04" checked>
 									<span class="label-title">한국</span>
 								</label>
 							</div>
 							<div class="inp inp-medium">
 								<label>
-									<input type="checkbox" class="type-blue" id="chk05" checked>
+									<input type="checkbox" class="type-us" id="chk05" checked>
 									<span class="label-title">미국</span>
 								</label>
 							</div>
 							<div class="inp inp-medium">
 								<label>
-									<input type="checkbox" class="type-red700" id="chk06" checked>
+									<input type="checkbox" class="type-cn" id="chk06" checked>
 									<span class="label-title">중국</span>
 								</label>
 							</div>
 							<div class="inp inp-medium">
 								<label>
-									<input type="checkbox" class="type-red900" id="chk07" checked>
+									<input type="checkbox" class="type-jp" id="chk07" checked>
 									<span class="label-title">일본</span>
 								</label>
 							</div>
 							<div class="inp inp-medium">
 								<label>
-									<input type="checkbox" class="type-deepblue" id="chk08" checked>
+									<input type="checkbox" class="type-eu" id="chk08" checked>
 									<span class="label-title">유럽</span>
 								</label>
 							</div>
@@ -172,7 +172,7 @@
 							</div>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-deepBlue-50">
+									<div class="tags tags-small tags-lightCyan">
 										<div class="flag flag-us"><strong></strong>미국</div>
 									</div>
 									<strong class="title-medium">유로존 무역수지</strong>
@@ -202,7 +202,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-gray-800">
+									<div class="tags tags-small tags-kr">
 										<div class="flag flag-kr"><strong></strong>한국</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -232,7 +232,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-red-50">
+									<div class="tags tags-small tags-cn">
 										<div class="flag flag-cn"><strong></strong>중국</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -262,7 +262,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-red-200">
+									<div class="tags tags-small tags-jp">
 										<div class="flag flag-jp"><strong></strong>일본</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -292,7 +292,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-deepBlue-900">
+									<div class="tags tags-small tags-eu">
 										<div class="flag flag-eu"><strong></strong>유럽</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -329,7 +329,7 @@
 							</div>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-deepBlue-50">
+									<div class="tags tags-small tags-us">
 										<div class="flag flag-us"><strong></strong>미국</div>
 									</div>
 									<strong class="title-medium">유로존 무역수지</strong>
@@ -359,7 +359,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-gray-800">
+									<div class="tags tags-small tags-kr">
 										<div class="flag flag-kr"><strong></strong>한국</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -389,7 +389,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-red-50">
+									<div class="tags tags-small tags-cn">
 										<div class="flag flag-cn"><strong></strong>중국</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -419,7 +419,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-red-200">
+									<div class="tags tags-small tags-jp">
 										<div class="flag flag-jp"><strong></strong>일본</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -449,7 +449,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-deepBlue-900">
+									<div class="tags tags-small tags-eu">
 										<div class="flag flag-eu"><strong></strong>유럽</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -495,7 +495,7 @@
 							</div>
 						</div>
 
-						<p class="description info body-small fs-14 fc-typography-caption fw-400 mt40">지표 일정은 한국시간 기준입니다. <br> Bloomberg와 투자상품전략부의 칼럼을 참조합니다. <br> 일정은 월 1회, 세부 내용은 주 1회 업데이트 됩니다. <br> 중요도는 인베스팅닷컴 데이터를 참조합니다.</p>
+						<p class="description info body-small fs-14 fc-typography-caption fw-400 mt24">지표 일정은 한국시간 기준입니다. <br> Bloomberg와 투자상품전략부의 칼럼을 참조합니다. <br> 일정은 월 1회, 세부 내용은 주 1회 업데이트 됩니다. <br> 중요도는 인베스팅닷컴 데이터를 참조합니다.</p>
 
 
 					</div>
