--- a/html/PBWIV/PBWIV090000_nodata.html
+++ b/html/PBWIV/PBWIV090000_nodata.html
@@ -116,7 +116,7 @@
 					<div class="division-center">
 
 						<div class="no-result">
-							<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
+							<i class="icon-only icon-48 icon-nobook bg-icon-gray_1"></i>
 							<p class="body-medium fw-400">등록된 금융뉴스가 없습니다.</p>
 						</div>
 
@@ -193,7 +193,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>검색</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-search"></i>검색</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
