--- a/html/PBWLO/PBWLO010003.html
+++ b/html/PBWLO/PBWLO010003.html
@@ -128,7 +128,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-privacy">동의</button>
+				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-privacy"><i class="ico-check"></i>동의</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -180,7 +180,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary">전체 동의</button>
+							<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>전체 동의</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
