--- a/html/PBWLO/PBWLO020003.html
+++ b/html/PBWLO/PBWLO020003.html
@@ -178,7 +178,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-privacy">확인</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>확인</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
