--- a/html/PBWLO/PBWLO_alert.html
+++ b/html/PBWLO/PBWLO_alert.html
@@ -73,17 +73,17 @@
 				<div class="content">
 
 					<br>
-					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 실패했습니다.', '행번 또는 비밀번호가 <br> 일치하지 않습니다.', 'icon-caution', '확인')">로그인에 실패했습니다.</button>
+					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 실패했습니다.', '행번 또는 비밀번호가 <br> 일치하지 않습니다.', 'icon-caution', `<i class='ico-check'></i>확인`)">로그인에 실패했습니다.</button>
 					<br>
-					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 실패했습니다.', '통합 로그인해주세요.', 'icon-caution', '확인')">로그인에 실패했습니다.</button>
+					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 실패했습니다.', '통합 로그인해주세요.', 'icon-caution', `<i class='ico-check'></i>확인`)">로그인에 실패했습니다.</button>
 					<br>
-					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 3회 실패했습니다.', '통합 로그인 또는 생체인증 <br> 로그인을 다시 인증해주세요.', 'icon-caution', '확인')">로그인에 3회 실패했습니다.</button>
+					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 3회 실패했습니다.', '통합 로그인 또는 생체인증 <br> 로그인을 다시 인증해주세요.', 'icon-caution', `<i class='ico-check'></i>확인`)">로그인에 3회 실패했습니다.</button>
 					<br>
-					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 실패했습니다.', '행번 또는 비밀번호가 <br> 일치하지 않습니다. <br> 통합 로그인 또는 생체인증 <br> 로그인을 다시 인증해주세요.', 'icon-caution', '확인')">로그인에 실패했습니다.</button>
+					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 실패했습니다.', '행번 또는 비밀번호가 <br> 일치하지 않습니다. <br> 통합 로그인 또는 생체인증 <br> 로그인을 다시 인증해주세요.', 'icon-caution', `<i class='ico-check'></i>확인`)">로그인에 실패했습니다.</button>
 					<br>
-					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 실패했습니다.', '행번으로 로그인해주세요.', 'icon-caution', '확인')">로그인에 실패했습니다.</button>
+					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 실패했습니다.', '행번으로 로그인해주세요.', 'icon-caution', `<i class='ico-check'></i>확인`)">로그인에 실패했습니다.</button>
 					<br>
-					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 5회 실패했습니다.', '포탈 또는 모바일 오피스에서 <br> 비밀번호를 초기화해 주세요.', 'icon-caution', '확인')">로그인에 5회 실패했습니다.</button>
+					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire04('로그인에 5회 실패했습니다.', '포탈 또는 모바일 오피스에서 <br> 비밀번호를 초기화해 주세요.', 'icon-caution', `<i class='ico-check'></i>확인`)">로그인에 5회 실패했습니다.</button>
 					<br>
 
 					<button type="button" class="btn-large btn-outlined" onclick="$swal.fire02('서비스 이용 대상이 아닙니다', 'caution', '확인');">서비스 이용 대상이 아닙니다</button>
