--- a/html/PBWMA/PBWMA000000_skeletone.html
+++ b/html/PBWMA/PBWMA000000_skeletone.html
@@ -330,7 +330,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap pt16 pb0">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close="">자세히 보기</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close="">자세히 보기<i class="ico-chevron-large bg-icon-white"></i></button>
 						</div>
 						<div class="btn-wrap pt8 pb16">
 							<button type="button" class="btn-large fs-18" data-micromodal-close="">더 이상 보지 않기</button>
@@ -353,7 +353,7 @@
 				el: ".swiper-pagination",
 			}
 		});
-		// MicroModal.show('modal-notice');
+		MicroModal.show('modal-notice');
 	</script>
 
 
