--- a/html/PBWMA/PBWMA020000.html
+++ b/html/PBWMA/PBWMA020000.html
@@ -179,7 +179,7 @@
 
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-deepBlue-50">
+									<div class="tags tags-small tags-us">
 										<div class="flag flag-us"><strong></strong>미국</div>
 									</div>
 									<strong class="title-medium">유로존 무역수지</strong>
@@ -209,7 +209,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-gray-800">
+									<div class="tags tags-small tags-kr">
 										<div class="flag flag-kr"><strong></strong>한국</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -239,7 +239,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-red-50">
+									<div class="tags tags-small tags-cn">
 										<div class="flag flag-cn"><strong></strong>중국</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -269,7 +269,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-red-200">
+									<div class="tags tags-small tags-jp">
 										<div class="flag flag-jp"><strong></strong>일본</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
@@ -299,7 +299,7 @@
 							</a>
 							<a href="#" class="eco-list">
 								<div class="eco-title">
-									<div class="tags tags-small tags-deepBlue-900">
+									<div class="tags tags-small tags-eu">
 										<div class="flag flag-eu"><strong></strong>유럽</div>
 									</div>
 									<strong class="title-medium">제목이 노출됩니다</strong>
