--- a/html/PBWME/PBWME020000.html
+++ b/html/PBWME/PBWME020000.html
@@ -125,7 +125,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary">전체 동의</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>전체 동의</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
