--- a/html/common/common_400.html
+++ b/html/common/common_400.html
@@ -160,6 +160,11 @@
 		.btn-outlined:not([aria-disabled="true"]):active {
 			background-color: #7484950D;
 		}
+
+		.list-spacing {
+			display: block;
+			margin-top: 8px;
+		}
 	</style>
 </head>
 
@@ -199,7 +204,7 @@
 								</svg>
 								<span>요청하신 페이지를 찾을 수 없습니다.</span>
 							</h1>
-							<p>요청하신 페이지의 주소가 잘못 되었거나,<br> 페이지가 존재하지 않습니다. <br><br> 입력하신 주소가 정확한지 <br>다시 한번 확인해 주시기 바랍니다.</p>
+							<p>요청하신 페이지의 주소가 잘못 되었거나,<br> 페이지가 존재하지 않습니다. <span class="list-spacing"></span> 입력하신 주소가 정확한지 <br>다시 한번 확인해 주시기 바랍니다.</p>
 						</div>
 						<!-- //init-regist -->
 					</div>
