--- a/html/index.html
+++ b/html/index.html
@@ -831,6 +831,14 @@
 					<tr>
 						<td></td>
 						<td></td>
+						<td></td>
+						<td>게시글 없음</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWFU050000_nodata</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
 						<td>펀드 비교</td>
 						<td></td>
 						<td></td>
@@ -1159,6 +1167,14 @@
 						<td>검색</td>
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWIV080002</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>검색결과없음</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV080002_noresult</a></td>
 					</tr>
 					<tr>
 						<td></td>
