--- a/html/PBWAD/PBWAD020000.html
+++ b/html/PBWAD/PBWAD020000.html
@@ -130,7 +130,7 @@
 					<!-- //group-form -->
 
 					<div class="btn-wrap">
-						<button type="button" class="btn-medium btn-primary">검색</button>
+						<button type="button" class="btn-medium btn-primary"><i class="ico-search"></i>검색</button>
 					</div>
 
 					<!-- memo-list -->
@@ -196,8 +196,8 @@
 					<div class="division-center">
 
 						<div class="no-result">
-							<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
-							<p class="body-medium fw-400">내역이 없습니다.</p>
+							<i class="icon-only icon-48 icon-notext bg-icon-gray_1"></i>
+							<p class="body-medium fw-400">등록된 글이 없습니다.</p>
 						</div>
 
 					</div>
