--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -1102,7 +1102,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
@@ -1112,7 +1112,7 @@
 					<div class="bottom-btn">
 						<div class="btn-wrap">
 							<button type="button" class="btn-large btn-outlined" onclick="$swal.fire02('삭제하시겠습니까', 'caution', '예',  true, '아니요');">삭제</button>
-							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
