--- a/html/PBWBU/PBWBU010001_nodata.html
+++ b/html/PBWBU/PBWBU010001_nodata.html
@@ -96,7 +96,7 @@
 								<source srcset="/resources/images/PBWBU/init_business_card_nodata.svg">
 								<img src="/resources/images/PBWBU/init_business_card_nodata.svg" alt="">
 							</picture>
-							<p class="description caution body-large ac fc-typography-gray">지점에 등록된 고객 명함이 없습니다. <br> 고객 명함을 등록해 보세요.</p>
+							<p class="body-large ac fc-typography-gray">지점에 등록된 고객 명함이 없습니다. <br> 고객 명함을 등록해 보세요.</p>
 						</div>
 						<!-- //init-regist -->
 					</div>
