--- a/html/PBWCA/PBWCA010000_day.html
+++ b/html/PBWCA/PBWCA010000_day.html
@@ -308,7 +308,7 @@
 		<div class="bottom-btn">
 			<div class="btn-wrap">
 				<button type="button" class="btn-large btn-outlined">취소</button>
-				<button type="button" class="btn-large btn-primary">등록</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>등록</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -448,6 +448,15 @@
 						<!-- //group-form -->
 					</div>
 
+				</div>
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>확인</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
 				</div>
 			</div>
 		</div>
@@ -602,7 +611,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close="">선택</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>선택</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
@@ -657,7 +666,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close="">저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
