--- a/html/PBWCA/PBWCA010000_month.html
+++ b/html/PBWCA/PBWCA010000_month.html
@@ -309,7 +309,7 @@
 		<div class="bottom-btn">
 			<div class="btn-wrap">
 				<button type="button" class="btn-large btn-outlined">취소</button>
-				<button type="button" class="btn-large btn-primary">등록</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i>등록</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
@@ -462,6 +462,16 @@
 						<!-- //group-form -->
 					</div>
 
+				</div>
+
+				<div class="modal__footer">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>확인</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
 				</div>
 			</div>
 		</div>
@@ -616,7 +626,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close="">선택</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>선택</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
@@ -671,7 +681,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close="">저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
