--- a/html/PBWCA/PBWCA029900.html
+++ b/html/PBWCA/PBWCA029900.html
@@ -278,7 +278,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close="">확인</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close=""><i class="ico-check"></i>확인</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
