--- a/html/PBWCA/PBWCA040000.html
+++ b/html/PBWCA/PBWCA040000.html
@@ -87,44 +87,54 @@
 				<!-- content -->
 				<div class="content">
 
-					<p class="description caution body-small fc-typography-caption mt24">개인일정의 제목과 메모의 내용에서 검색해드려요.</p>
 
-					<!-- group-form -->
-					<div class="group-form mt24">
-						<div class="group-content">
-							<div class="form">
-								<div class="label"></div>
-								<div class="input-wrap input-datepicker">
-									<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker1">2023-11-11</button>
-									<div class="bul">-</div>
-									<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker2">2024-11-12</button>
+					<style>
+						body {
+							background-color: var(--background-bg_lightGray);
+						}
+					</style>
+
+					<div class="content-fluid bg-surface-surface">
+
+						<p class="description caution body-small fc-typography-caption mt24">개인일정의 제목과 메모의 내용에서 검색해드려요.</p>
+
+						<!-- group-form -->
+						<div class="group-form mt24">
+							<div class="group-content">
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap input-datepicker">
+										<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker1">2023-11-11</button>
+										<div class="bul">-</div>
+										<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker2">2024-11-12</button>
+									</div>
+									<p class="validate-text"></p>
 								</div>
-								<p class="validate-text"></p>
 							</div>
 						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt24">
-						<div class="group-content">
-							<div class="form">
-								<div class="label"></div>
-								<div class="input-wrap">
-									<input type="text" placeholder="검색어를 2자 이상 입력해 주세요." aria-label="일정 검색">
-									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+						<!-- //group-form -->
+						<!-- group-form -->
+						<div class="group-form mt24">
+							<div class="group-content">
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap">
+										<input type="text" placeholder="검색어를 2자 이상 입력해 주세요." aria-label="일정 검색">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+									</div>
+									<p class="validate-text"></p>
 								</div>
-								<p class="validate-text"></p>
 							</div>
 						</div>
+						<!-- //group-form -->
+						<!-- btn-wrap -->
+						<div class="btn-wrap pt40 pb24">
+							<button type="button" class="btn-medium btn-primary"><i class="ico-search"></i>검색</button>
+						</div>
+						<!-- //btn-wrap -->
 					</div>
-					<!-- //group-form -->
 
-					<!-- btn-wrap -->
-					<div class="btn-wrap pt40 pb24">
-						<button type="button" class="btn-large btn-primary">검색</button>
-					</div>
-					<!-- //btn-wrap -->
+
 
 
 					<!-- schedule-section -->
