--- a/html/PBWCL/PBWCL000000.html
+++ b/html/PBWCL/PBWCL000000.html
@@ -166,7 +166,7 @@
 		<div class="bottom-btn">
 			<div class="btn-wrap">
 				<button type="button" class="btn-large btn-outlined">초기화</button>
-				<button type="button" class="btn-large btn-primary">조회</button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i>조회</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
