--- a/html/PBWCL/PBWCL030000.html
+++ b/html/PBWCL/PBWCL030000.html
@@ -376,7 +376,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>선택완료</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-check"></i>선택완료</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
@@ -489,7 +489,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>선택완료</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-check"></i>선택완료</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
