--- a/html/PBWFI/PBWFI000000_tab02_02.html
+++ b/html/PBWFI/PBWFI000000_tab02_02.html
@@ -167,7 +167,7 @@
 		<!-- bottom-btn -->
 		<div class="bottom-btn">
 			<div class="btn-wrap">
-				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-calculator">조회</button>
+				<button type="button" class="btn-large btn-primary" data-micromodal-trigger="modal-calculator"><i class="ico-check"></i>조회</button>
 			</div>
 		</div>
 		<!-- //bottom-btn -->
