--- a/html/PBWFI/PBWFI040000.html
+++ b/html/PBWFI/PBWFI040000.html
@@ -143,7 +143,7 @@
 
 					<!-- btn-wrap -->
 					<div class="btn-wrap bg-transparent py0 my32">
-						<button type="button" class="btn-medium btn-primary btn-round" style="max-width:130px;">조회</button>
+						<button type="button" class="btn-medium btn-primary btn-round" style="max-width:130px;"><i class="ico-check"></i>조회</button>
 					</div>
 					<!-- //btn-wrap -->
 
@@ -339,8 +339,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-outlined" data-micromodal-close>저장</button>
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
@@ -453,8 +452,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-outlined" data-micromodal-close>저장</button>
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
