--- a/html/PBWFU/PBWFU010000.html
+++ b/html/PBWFU/PBWFU010000.html
@@ -309,7 +309,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>조회</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-check"></i>조회</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
