--- a/html/PBWIV/PBWIV060000.html
+++ b/html/PBWIV/PBWIV060000.html
@@ -201,22 +201,24 @@
 							<div class="stroke stroke4 content-fluid"></div>
 							<h2 class="headline-small ac mt40">지표별 수익률</h2>
 
-							<div class="chart-wrap mt32">
+							<!-- tab-content -->
+							<div class="tab-content mt32">
+								<ul class="tab-list tab-button" role="tablist">
+									<li class="tab tab-active"><a role="tab" href="#">1개월</a></li>
+									<li class="tab"><a role="tab" href="#">3개월</a></li>
+									<li class="tab"><a role="tab" href="#">1년</a></li>
+									<li class="tab"><a role="tab" href="#">3년</a></li>
+									<li class="tab"><a role="tab" href="#">5년</a></li>
+								</ul>
+							</div>
+							<!-- //tab-content -->
+
+							<div class="chart-wrap mt10 bg-transparent">
 								<div style="height:180px;">
 									chart 예시
 									<div id="chart2" data-aos data-aos-id="chart2"></div>
 								</div>
-								<!-- tab-content -->
-								<div class="tab-content mt32">
-									<ul class="tab-list tab-button" role="tablist">
-										<li class="tab tab-active"><a role="tab" href="#">1개월</a></li>
-										<li class="tab"><a role="tab" href="#">3개월</a></li>
-										<li class="tab"><a role="tab" href="#">1년</a></li>
-										<li class="tab"><a role="tab" href="#">3년</a></li>
-										<li class="tab"><a role="tab" href="#">5년</a></li>
-									</ul>
-								</div>
-								<!-- //tab-content -->
+
 								<div class="group pb0 mt32">
 									<div class="right">
 										<span class="divide-list">
