--- a/html/PBWIV/PBWIV080002_noresult.html
+++ b/html/PBWIV/PBWIV080002_noresult.html
@@ -69,7 +69,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>일정 검색</h1>
+					<h1>영업캘린더</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
@@ -87,47 +87,51 @@
 				<!-- content -->
 				<div class="content">
 
-					<p class="description caution body-small fc-typography-caption mt24">개인일정의 제목과 메모의 내용에서 검색해드려요.</p>
+					<style>
+						body {
+							background-color: var(--background-bg_lightGray);
+						}
+					</style>
 
-					<!-- group-form -->
-					<div class="group-form mt24">
-						<div class="group-content">
-							<div class="form">
-								<div class="label"></div>
-								<div class="input-wrap input-datepicker">
-									<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker1">2023-11-11</button>
-									<div class="bul">-</div>
-									<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker2">2024-11-12</button>
+					<div class="content-fluid bg-surface-surface">
+						<!-- group-form -->
+						<div class="group-form mt24">
+							<div class="group-content">
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap input-datepicker">
+										<button type="button" aria-label="대상기간 시작일" data-micromodal-trigger="modal-datepicker-month1">2023-11</button>
+										<div class="bul">-</div>
+										<button type="button" aria-label="대상기간 종료일" data-micromodal-trigger="modal-datepicker-month2">2024-10</button>
+									</div>
+									<p class="validate-text"></p>
 								</div>
-								<p class="validate-text"></p>
 							</div>
 						</div>
-					</div>
-					<!-- //group-form -->
-
-					<!-- group-form -->
-					<div class="group-form mt24">
-						<div class="group-content">
-							<div class="form">
-								<div class="label"></div>
-								<div class="input-wrap">
-									<input type="text" placeholder="검색어를 2자 이상 입력해 주세요." aria-label="일정 검색">
-									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+						<!-- //group-form -->
+						<!-- group-form -->
+						<div class="group-form mt24">
+							<div class="group-content">
+								<div class="form">
+									<div class="label"></div>
+									<div class="input-wrap">
+										<input type="text" placeholder="검색어를 2자 이상 입력해 주세요." aria-label="일정 검색">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+									</div>
+									<p class="validate-text"></p>
 								</div>
-								<p class="validate-text"></p>
 							</div>
 						</div>
+						<!-- //group-form -->
+						<!-- btn-wrap -->
+						<div class="btn-wrap pt40 pb24">
+							<button type="button" class="btn-medium btn-primary"><i class="ico-search"></i>검색</button>
+						</div>
+						<!-- //btn-wrap -->
 					</div>
-					<!-- //group-form -->
-
-					<!-- btn-wrap -->
-					<div class="btn-wrap pt40 pb24">
-						<button type="button" class="btn-medium btn-primary"><i class="ico-search"></i>검색</button>
-					</div>
-					<!-- //btn-wrap -->
 
 					<!-- division-center -->
-					<div class="division-center content-fluid bg-background-bg_lightGray mb-24 pb24">
+					<div class="division-center">
 
 						<div class="no-result">
 							<i class="icon-only icon-48 icon-noresult bg-icon-gray_1"></i>
@@ -136,6 +140,7 @@
 
 					</div>
 					<!-- //division-center -->
+
 
 
 				</div>
@@ -154,8 +159,9 @@
 	<!-- //main -->
 
 
+
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker1" aria-hidden="true">
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker-month1" aria-hidden="true">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
@@ -164,21 +170,21 @@
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
+
 					<div class="content">
-						<div class="datepicker-wrap">
-							<div class="datepicker-trigger" id="datepicker1"></div>
+						<div class="datepicker-wrap datepicker-wrap-month">
+							<div class="datepicker-trigger" id="datepicker_month1"></div>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- //micromodal -->
 
-
-
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker2" aria-hidden="true">
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker-month2" aria-hidden="true">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
@@ -187,106 +193,85 @@
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
+
 					<div class="content">
-						<div class="datepicker-wrap">
-							<div class="datepicker-trigger" id="datepicker2"></div>
+						<div class="datepicker-wrap datepicker-wrap-month">
+							<div class="datepicker-trigger" id="datepicker_month2"></div>
 						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- //micromodal -->
 
-
-
 	<script>
-		const modalTrigger1 = document.querySelectorAll('[data-micromodal-trigger="modal-datepicker1"]')
-		modalTrigger1.forEach(function(button) {
-
-			button.addEventListener("click", function(event) {
-				MicroModal.show('modal-datepicker1', {
-					// openTrigger: 'data-custom-open', // [3]
-					// closeTrigger: 'data-custom-close', // [4]
-					// openClass: 'is-open', // [5]
-					disableScroll: true, // [6]
-					disableFocus: true, // [7]
-					awaitOpenAnimation: true, // [8]
-					awaitCloseAnimation: true, // [9]
-					// debugMode: true // [10]
-					onShow: function(modalPopup) {
-						$("#datepicker1").datepicker({
-							dateFormat: 'yy-mm-dd',
-							prevText: '이전 달',
-							nextText: '다음 달',
-							monthNames: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
-							monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
-							dayNames: ['일', '월', '화', '수', '목', '금', '토'],
-							dayNamesShort: ['일', '월', '화', '수', '목', '금', '토'],
-							dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
-							showMonthAfterYear: true,
-							yearSuffix: '년',
-							// minDate: 0,
-							showButtonPanel: true,
-							currentText: "오늘",
-							closeText: "닫기",
-							showOtherMonths: true,
-							onSelect: function(input, date) {
-								MicroModal.close('modal-datepicker1');
-								button.innerText = input;
-							},
-						});
-					},
-					onClose: function(modalPopup) {
-						// console.log($(".jquery-datepicker").datepicker("refresh"))
-					}
-				});
+		const monthTrigger1 = document.querySelector('[data-micromodal-trigger="modal-datepicker-month1"]')
+		monthTrigger1.addEventListener("click", function(event) {
+			MicroModal.show('modal-datepicker-month1', {
+				// openTrigger: 'data-custom-open', // [3]
+				// closeTrigger: 'data-custom-close', // [4]
+				// openClass: 'is-open', // [5]
+				disableScroll: true, // [6]
+				disableFocus: true, // [7]
+				awaitOpenAnimation: true, // [8]
+				awaitCloseAnimation: true, // [9]
+				// debugMode: true // [10]
+				onShow: function() {
+					$('#datepicker_month1').monthpicker({
+						dateFormat: 'yy-mm',
+						prevText: '이전 달',
+						nextText: '다음 달',
+						monthNames: ["1월", "2월", "3월", "4월", "5월", "6월", "7월", "8월", "9월", "10월", "11월", "12월"],
+						monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+						showMonthAfterYear: true,
+						showButtonPanel: false,
+						closeText: "닫기",
+						onSelect: function(input, date) {
+							MicroModal.close('modal-datepicker-month1');
+							monthTrigger1.innerText = input;
+						},
+					});
+				},
+				onClose: function() {
+					// $("#datepicker_month").datepicker("destroy")
+				}
 			});
-		})
-	</script>
-	<script>
-		const modalTrigger2 = document.querySelectorAll('[data-micromodal-trigger="modal-datepicker2"]')
-		modalTrigger2.forEach(function(button) {
+		});
 
-			button.addEventListener("click", function(event) {
-				MicroModal.show('modal-datepicker2', {
-					// openTrigger: 'data-custom-open', // [3]
-					// closeTrigger: 'data-custom-close', // [4]
-					// openClass: 'is-open', // [5]
-					disableScroll: true, // [6]
-					disableFocus: true, // [7]
-					awaitOpenAnimation: true, // [8]
-					awaitCloseAnimation: true, // [9]
-					// debugMode: true // [10]
-					onShow: function(modalPopup) {
-						$("#datepicker2").datepicker({
-							dateFormat: 'yy-mm-dd',
-							prevText: '이전 달',
-							nextText: '다음 달',
-							monthNames: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
-							monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
-							dayNames: ['일', '월', '화', '수', '목', '금', '토'],
-							dayNamesShort: ['일', '월', '화', '수', '목', '금', '토'],
-							dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
-							showMonthAfterYear: true,
-							yearSuffix: '년',
-							// minDate: 0,
-							showButtonPanel: true,
-							currentText: "오늘",
-							closeText: "닫기",
-							showOtherMonths: true,
-							onSelect: function(input, date) {
-								MicroModal.close('modal-datepicker2');
-								button.innerText = input;
-							},
-						});
-					},
-					onClose: function(modalPopup) {
-						// console.log($(".jquery-datepicker").datepicker("refresh"))
-					}
-				});
+		const monthTrigger2 = document.querySelector('[data-micromodal-trigger="modal-datepicker-month2"]')
+		monthTrigger2.addEventListener("click", function(event) {
+			MicroModal.show('modal-datepicker-month2', {
+				// openTrigger: 'data-custom-open', // [3]
+				// closeTrigger: 'data-custom-close', // [4]
+				// openClass: 'is-open', // [5]
+				disableScroll: true, // [6]
+				disableFocus: true, // [7]
+				awaitOpenAnimation: true, // [8]
+				awaitCloseAnimation: true, // [9]
+				// debugMode: true // [10]
+				onShow: function() {
+					$('#datepicker_month2').monthpicker({
+						dateFormat: 'yy-mm',
+						prevText: '이전 달',
+						nextText: '다음 달',
+						monthNames: ["1월", "2월", "3월", "4월", "5월", "6월", "7월", "8월", "9월", "10월", "11월", "12월"],
+						monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+						showMonthAfterYear: true,
+						showButtonPanel: false,
+						closeText: "닫기",
+						onSelect: function(input, date) {
+							MicroModal.close('modal-datepicker-month2');
+							monthTrigger2.innerText = input;
+						},
+					});
+				},
+				onClose: function() {
+					// $("#datepicker_month").datepicker("destroy")
+				}
 			});
-		})
+		});
 	</script>
 </body>
 
