--- a/html/PBWIV/PBWIV090000.html
+++ b/html/PBWIV/PBWIV090000.html
@@ -286,7 +286,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" data-micromodal-close>검색</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close><i class="ico-search"></i>검색</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
