--- a/html/common/common_error.html
+++ b/html/common/common_error.html
@@ -160,6 +160,11 @@
 		.btn-outlined:not([aria-disabled="true"]):active {
 			background-color: #7484950D;
 		}
+
+		.list-spacing {
+			display: block;
+			margin-top: 8px;
+		}
 	</style>
 </head>
 
