--- a/html/PBWIV/PBWIV070000.html
+++ b/html/PBWIV/PBWIV070000.html
@@ -360,7 +360,7 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
-							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '저장되었습니다.')" data-micromodal-close><i class="ico-check"></i>저장</button>
+							<button type="button" class="btn-large btn-primary" onclick="toastr.success('', '관심 설정이 저장되었습니다.')" data-micromodal-close><i class="ico-check"></i>저장</button>
 						</div>
 					</div>
 					<!-- //bottom-btn -->
