--- a/html/index.html
+++ b/html/index.html
@@ -1155,6 +1155,15 @@
 					<tr>
 						<td></td>
 						<td></td>
+						<td></td>
+						<td></td>
+						<td>관심지수 없음</td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV070000_nodata</a></td>
+					</tr>
+
+					<tr>
+						<td></td>
+						<td></td>
 						<td>경제캘린더</td>
 						<td></td>
 						<td></td>
