--- a/html/PBWCA/PBWCA010000_weekend.html
+++ b/html/PBWCA/PBWCA010000_weekend.html
@@ -659,6 +659,23 @@
 								</label>
 							</div>
 						</div>
+						<div class="schedule-regist-target p0 mt16" id="dp02" style="display:block;">
+							<div class="inp inp-toggle-text">
+								<input type="radio" name="dp02" aria-label="오전" checked>
+								<input type="radio" name="dp02" aria-label="오후">
+							</div>
+							<div class="form mt24">
+								<div class="input-divide">
+									<div class="input-wrap">
+										<input type="number" placeholder="">
+									</div>
+									<div class="bul">:</div>
+									<div class="input-wrap">
+										<input type="number" placeholder="">
+									</div>
+								</div>
+							</div>
+						</div>
 						<p class="description caution body-small fc-typography-caption fs14 mt16">APP에서 등록한 일정의 알림은 APP에서만 발송됩니다</p>
 					</div>
 				</div>
