--- a/html/PBWIV/PBWIV060000.html
+++ b/html/PBWIV/PBWIV060000.html
@@ -214,10 +214,24 @@
 							<!-- //tab-content -->
 
 							<div class="chart-wrap mt10 bg-transparent">
+								<ul>
+									<li style="color:#2589F4">#2589F4</li>
+									<li style="color:#1641D0">#1641D0</li>
+									<li style="color:#1AA3C1">#1AA3C1</li>
+									<li style="color:#B348E5">#B348E5</li>
+									<li style="color:#F35E9C">#F35E9C</li>
+									<li style="color:#7163EE">#7163EE</li>
+									<li style="color:#00AD7C">#00AD7C</li>
+									<li style="color:#FFD138">#FFD138</li>
+									<li style="color:#F68486">#F68486</li>
+									<li style="color:#CC1E24">#CC1E24</li>
+								</ul>
 								<div style="height:180px;">
 									chart 예시
 									<div id="chart2" data-aos data-aos-id="chart2"></div>
+
 								</div>
+
 
 								<div class="group pb0 mt32">
 									<div class="right">
