--- a/html/PBWCH/PBWCH000000.html
+++ b/html/PBWCH/PBWCH000000.html
@@ -90,7 +90,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<a href="#" class="fab fab-secondary fab-circle" aria-label="펀드/지수 검색"><i class="ico-search bg-icon-default"></i></a>
+						<a href="#" class="fab fab-secondary fab-square" aria-label="펀드/지수 검색"><i class="ico-search bg-icon-default"></i></a>
 					</div>
 					<!-- //snackbar-content -->
 
