--- a/html/PBWIV/PBWIV080000.html
+++ b/html/PBWIV/PBWIV080000.html
@@ -69,7 +69,7 @@
 					<button type="button" class="header-btn" aria-label="뒤로 가기"><i class="i-back"></i></button>
 				</div>
 				<div class="center">
-					<h1>영업캘린더</h1>
+					<h1>경제캘린더</h1>
 				</div>
 				<div class="right">
 					<button type="button" class="header-btn" aria-label="메뉴 열기"><i class="i-menu"></i></button>
@@ -95,7 +95,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<a href="#" class="fab fab-secondary fab-circle" aria-label="일정 검색"><i class="ico-search bg-icon-default"></i></a>
+						<a href="#" class="fab fab-secondary fab-square" aria-label="일정 검색"><i class="ico-search bg-icon-default"></i></a>
 					</div>
 					<!-- //snackbar-content -->
 
