--- a/html/PBWIV/PBWIV120000.html
+++ b/html/PBWIV/PBWIV120000.html
@@ -97,7 +97,7 @@
 
 					<!-- snackbar-content -->
 					<div class="snackbar-content is-sticky">
-						<button type="button" class="fab fab-secondary fab-circle" aria-label="뉴스 검색" data-micromodal-trigger="modal-news-search"><i class="ico-search bg-icon-default"></i></button>
+						<button type="button" class="fab fab-secondary fab-square" aria-label="뉴스 검색" data-micromodal-trigger="modal-news-search"><i class="ico-search bg-icon-default"></i></button>
 					</div>
 					<!-- //snackbar-content -->
 
