--- a/html/PBWFI/PBWFI000000_tab02_01.html
+++ b/html/PBWFI/PBWFI000000_tab02_01.html
@@ -111,7 +111,7 @@
 					<div class="form mt40">
 						<div class="label"><strong class="title-medium">월적립금액</strong> <span class="right">5억5000만원</span></div>
 						<div class="input-wrap input-placeholder">
-							<input type="number" class="ar" placeholder="금액입력" aria-label="월적립금액">
+							<input type="number" class="ar" placeholder="0" aria-label="월적립금액">
 							<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 							<div class="visible-placeholder">원</div>
 						</div>
@@ -128,7 +128,7 @@
 					<div class="form mt40">
 						<div class="label"><strong class="title-medium">적립기간</strong></div>
 						<div class="input-wrap input-placeholder">
-							<input type="number" class="ar" placeholder="기간입력" aria-label="적립기간">
+							<input type="number" class="ar" placeholder="0" aria-label="적립기간">
 							<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 							<div class="visible-placeholder">개월</div>
 						</div>
@@ -145,7 +145,7 @@
 					<div class="form mt40">
 						<div class="label"><strong class="title-medium">예상금리</strong></div>
 						<div class="input-wrap input-placeholder">
-							<input type="number" class="ar" placeholder="금리입력" aria-label="예상금리">
+							<input type="number" class="ar" placeholder="0" aria-label="예상금리">
 							<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 							<div class="visible-placeholder">%</div>
 						</div>
