--- a/html/PBWFI/PBWFI030000.html
+++ b/html/PBWFI/PBWFI030000.html
@@ -91,7 +91,7 @@
 					<div class="form mt40">
 						<div class="label"><strong class="title-medium">대출원금</strong> <span class="right">5억5000만원</span></div>
 						<div class="input-wrap input-placeholder">
-							<input type="number" class="ar" placeholder="금액입력" aria-label="대출원금">
+							<input type="number" class="ar" placeholder="0" aria-label="대출원금">
 							<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 							<div class="visible-placeholder">원</div>
 						</div>
@@ -108,7 +108,7 @@
 					<div class="form mt40">
 						<div class="label"><strong class="title-medium">대출기간</strong></div>
 						<div class="input-wrap input-placeholder">
-							<input type="number" class="ar" placeholder="기간입력" aria-label="대출기간">
+							<input type="number" class="ar" placeholder="0" aria-label="대출기간">
 							<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 							<div class="visible-placeholder">개월</div>
 						</div>
@@ -125,7 +125,7 @@
 					<div class="form mt40">
 						<div class="label"><strong class="title-medium">거치기간</strong></div>
 						<div class="input-wrap input-placeholder">
-							<input type="number" class="ar" placeholder="기간입력" aria-label="거치기간">
+							<input type="number" class="ar" placeholder="0" aria-label="거치기간">
 							<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 							<div class="visible-placeholder">개월</div>
 						</div>
@@ -136,7 +136,7 @@
 					<div class="form mt40">
 						<div class="label"><strong class="title-medium">대출금리</strong></div>
 						<div class="input-wrap input-placeholder">
-							<input type="number" class="ar" placeholder="금리입력" aria-label="대출금리">
+							<input type="number" class="ar" placeholder="0" aria-label="대출금리">
 							<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 							<div class="visible-placeholder">%</div>
 						</div>
