--- a/html/PBWIV/PBWIV130000.html
+++ b/html/PBWIV/PBWIV130000.html
@@ -125,7 +125,7 @@
 						<div class="box">
 							<h2 class="headline-small">과거지수로 본 미래 예측</h2>
 
-							<div class="box-gray bg-background-bg_lightGray">
+							<div class="box-gray bg-background-bg_lightGray mt24">
 								<div style="height:180px;">
 									<div id="chart1" data-aos data-aos-id="chart1"></div>
 								</div>
@@ -157,7 +157,7 @@
 							<!-- //tab-content -->
 
 
-							<div class="box-gray bg-background-bg_lightGray">
+							<div class="box-gray bg-background-bg_lightGray mt24">
 								<div style="height:180px;">
 									<div id="chart2" data-aos data-aos-id="chart2"></div>
 								</div>
